@@ -32,6 +32,9 @@ See the end for copying conditions.
 ** libgnutls: Added support for GOST key unmasking and unwrapped GOST private
    keys parsing, as specified in R 50.1.112-2016.
 
+** certtool: Add parameter --no-text that prevents certtool from outputting
+   text before PEM-encoded private key, public key, certificate, CRL or CSR.
+
 ** API and ABI modifications:
 GNUTLS_AUTO_REAUTH: Added
 GNUTLS_CIPHER_AES_128_CFB8: Added
